--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "openai": "^4.56.0",
     "randomstring": "^1.3.0",
     "spotify-web-api-node": "^5.0.2"
   },
