--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "openai": "^4.56.0",
+    "path": "^0.12.7",
     "randomstring": "^1.3.0",
     "spotify-web-api-node": "^5.0.2"
   },
